15 July 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/app.module.ts:
 * clarin-angular/src/app/components/controls/annotation-visualizer/annotation-visualizer.component.html:
 * clarin-angular/src/app/components/controls/annotation-visualizer/annotation-visualizer.component.ts:
 * clarin-angular/src/app/components/controls/document/annotation-text-label/annotation-text-label.component.html:
 * clarin-angular/src/app/components/controls/document/annotation-text-text/annotation-text-text.component.html:
 * clarin-angular/src/app/components/controls/document/annotation-text-text/annotation-text-text.component.ts:
 * clarin-angular/src/app/components/controls/document/annotation-text/annotation-text.component.html:
 * clarin-angular/src/css/clarin-material.scss:
 * clarin-angular/src/app/directives/document-attributes/: Added support for
 Document Attributes.

14 July 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/annotation-visualizer/annotation-visualizer.component.html:
 * clarin-angular/src/app/components/controls/annotation-visualizer/annotation-visualizer.component.ts:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/css/clarin-material.scss: Fixed Annotation Visualiser
 component.

 * clarin-angular/src/app/services/text-widget/text-widget.service.ts: Added a
 new method (getAnnotationPresentableId), which tries to return a more "user
 friently" id.

 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts
 * clarin-angular/src/app/components/controls/overlapping-areas/overlapping-areas.component.html
 * clarin-angular/src/app/components/controls/overlapping-areas/overlapping-areas.component.ts:
 New functionality regarding overlapping annotations: Now, the "smallest"
 annotation under the mouse is selected. If more than one, successive clicks
 iterate over all "small" annotations.
